--- a/template/guest.html
+++ b/template/guest.html
@@ -1,16 +1,45 @@
 <div
-    style="background-color:white;border-top:2px solid #12ADDB;box-shadow:0 1px 3px #AAAAAA;line-height:180%;padding:0 15px 12px;width:500px;margin:50px auto;color:#555555;font-family:'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size:12px;">
-    <h2 style="border-bottom:1px solid #DDD;font-size:14px;font-weight:normal;padding:13px 0 10px 8px;">
-        <span style="color: #12ADDB;font-weight: bold;">&gt;</span>您({author_p})在
-        <a style="text-decoration:none;color: #12ADDB;" href="{permalink}" target="_blank">《{title}》</a>
-        的评论有了新的回复
-    </h2>
-    <div style="padding:0 12px 0 12px;margin-top:18px">
-        <p>时间:<span style="border-bottom:1px dashed #ccc;" t="5" times=" 20:42">{time}</span></p>
-        <p>你的评论:</p>
-        <p style="background-color: #f5f5f5;border: 0px solid #DDD;padding: 10px 15px;margin:18px 0">{text_p}</p>
-        <p><strong>{author}</strong>&nbsp;回复说:</p>
-        <p style="background-color: #f5f5f5;border: 0px solid #DDD;padding: 10px 15px;margin:18px 0">{text}</p>
-        <p>您可以点击 <a style="text-decoration:none; color:#12addb" href="{permalink}" target="_blank">查看回复的完整內容</a></p>
+    style="width: 550px;height: auto;border-radius: 5px;margin:0 auto;box-shadow: 0px 0px 20px #888888;position: relative;padding-bottom: 5px;">
+    <div
+        style="background-image: url(https://cdn.jsdelivr.net/gh/soxft/cdn@1.0.1/commenttomail/pic.png);width:550px;height: 300px;background-size: cover;background-repeat: no-repeat;border-radius: 5px 5px 0px 0px;">
     </div>
-</div>                                                        
+    <div
+        style="width: 200px;height: 40px;background-color: rgb(255, 114, 114);margin-top: -20px;margin-left: 20px;box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);color: rgb(255, 255, 255);text-align: center;line-height: 40px;">
+        Dear: {{comment_parent_author_name}}</div>
+    <div
+        style="background-color:white;line-height:180%;padding:0 15px 12px;width:520px;margin:30px auto;color:#555555;font-family:'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size:12px;margin-bottom: 0px;">
+        <h2 style="font-size:14px;font-weight:normal;padding:13px 0 10px 8px;"><span
+                style="color: #12ADDB;font-weight: bold;"></span>您在<a style="text-decoration:none;color: #ff7272;"
+                href="{{post_permalink}}" target="_blank">《{{post_title}}》</a>的评论有了新的回复: </h2>
+        <div style="padding:0 12px 0 12px;margin-top:18px">
+            <style type="text/css">
+                .comment>img {
+                    margin: 0px 6px 5px 6px;
+                    width: 25px;
+                }
+            </style>
+            <p>您的评论: </p>
+            <p class="comment"
+                style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
+                {{comment_parent_content}}</p>
+            <p><strong>{{comment_author_name}}</strong>&nbsp;给您的回复: </p>
+            <p class="comment"
+                style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
+                {{comment_content}}</p>
+        </div>
+    </div>
+    <div
+        style="color:#8c8c8c;;font-family: 'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size: 10px;width: 100%;text-align: center;word-wrap:break-word;margin-top: -30px;">
+        <p style="padding:20px;">萤火虫消失之后，那光的轨迹仍久久地印在我的脑际。那微弱浅淡的光点，仿佛迷失方向的魂灵，在漆黑厚重的夜幕中彷徨。——《挪威的森林》村上春树</p>
+    </div>
+    <a style="text-decoration:none; color:#FFF;width: 40%;text-align: center;background-color:#ff7272;height: 40px;line-height: 35px;box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.30);margin: -10px auto;display: block;"
+        href="{{comment_permalink}}" target="_blank">查看回复的完整內容</a>
+    <div
+        style="color:#8c8c8c;;font-family: 'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size: 10px;width: 100%;text-align: center;margin-top: 30px;">
+        <p>本邮件为系统自动发送，请勿直接回复~</p>
+    </div>
+    <div
+        style="color:#8c8c8c;;font-family: 'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size: 10px;width: 100%;text-align: center;padding-bottom: 1px;">
+        <p>©2019-2020 Copyright {{site_name}}</p>
+    </div>
+</div>
