--- a/template/owner.html
+++ b/template/owner.html
@@ -1,22 +1,43 @@
-                                  
-
-                                                                                              <div
-    style="background-color:white;border-top:2px solid #12ADDB;box-shadow:0 1px 3px #AAAAAA;line-height:180%;padding:0 15px 12px;width:500px;margin:50px auto;color:#555555;font-family:'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size:12px;">
-    <h2 style="border-bottom:1px solid #DDD;font-size:14px;font-weight:normal;padding:13px 0 10px 8px;">
-        <span style="color: #12ADDB;font-weight: bold;">&gt; </span>({author})在
-        <a style="text-decoration:none;color: #12ADDB;" href="{permalink}" target="_blank">《{title}》</a>创造了新的评论
-    </h2>
-    <div style="padding:0 12px 0 12px;margin-top:18px">
-        <p>时间: <span style="border-bottom:1px dashed #ccc;" t="5" times=" 20:42">{time}</span></p>
-        <p style="background-color: #f5f5f5;border: 0px solid #DDD;padding: 10px 15px;margin:18px 0">{text}</p>
-        <p>评论者"{author}"邮箱为:</p>
-        <p style="background-color: #f5f5f5;border: 0px solid #DDD;padding: 10px 15px;margin:18px 0">
-            <a href="mailto:{mail}" target="_blank">{mail}</a>
-        </p>
-        <p>评论者"{author}"其他信息:</p>
-        <p style="background-color: #f5f5f5;border: 0px solid #DDD;padding: 10px 15px;margin:18px 0">
-            IP: {ip}，状态: {status}，[<a href='{manage}' target='_blank'>管理评论</a>]
-        </p>
-        <p>您可以点击 <a style="text-decoration:none; color:#12addb" href="{permalink}" target="_blank">查看回复的完整內容 </a></p>
+<div
+    style="width: 550px;height: auto;border-radius: 5px;margin:0 auto;box-shadow: 0px 0px 20px #888888;position: relative;">
+    <div
+        style="background-image: url(https://cdn.jsdelivr.net/gh/soxft/cdn@1.0.1/commenttomail/pic.png);width:550px;height: 250px;background-size: cover;background-repeat: no-repeat;border-radius: 5px 5px 0px 0px;">
+    </div>
+    <div
+        style="background-color:white;line-height:180%;padding:0 15px 12px;width:520px;margin:10px auto;color:#555555;font-family:'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size:12px;margin-bottom: 0px;">
+        <h2 style="font-size:14px;font-weight:normal;padding:13px 0 10px 8px;">
+            <span style="color: #ff7272;font-weight: bold;"></span>
+            您的<a style="text-decoration:none;color: #ff7272;" href="{{post_permalink}}" target="_blank">
+                《{{post_title}}》
+            </a>有了新的回复:
+        </h2>
+        <div style="padding:0 12px 0 12px;margin-top:18px">
+            <p><strong>{{comment_author_name}}</strong>&nbsp;给您的评论: </p>
+            <style type="text/css">
+                .comment>img {
+                    margin: 0px 6px 5px 6px;
+                    width: 25px;
+                }
+            </style>
+            <p class="comment"
+                style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
+                {{comment_content}}</p>
+            <p>详细信息: </p>
+            <p
+                style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
+                IP: {{ip}}<br />
+                邮箱: <a style="text-decoration:none;color: #ff7272;" href="mailto:{{comment_author_mail}}">
+                    {{comment_author_mail}}
+                </a><br />
+                状态: {{status}} [<a style="text-decoration:none;color: #ff7272;" href='{{manage_url}}'
+                    target='_blank'>管理评论</a>]
+            </p>
+        </div>
+    </div>
+    <a style="text-decoration: none;color: rgb(255, 255, 255);width: 40%;text-align: center;background-color: rgb(255, 114, 114);height: 40px;line-height: 40px;box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);display: block;margin: auto;"
+        href="{{comment_permalink}}" target="_blank">查看回复的完整內容</a>
+    <div
+        style="color:#8c8c8c;;font-family: 'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size: 10px;width: 100%;text-align: center; padding-bottom: 1px;">
+        <p>©2019-2020 Copyright {{site_name}}</p>
     </div>
 </div>
