--- a/template/owner.html
+++ b/template/owner.html
@@ -7,8 +7,8 @@
         style="background-color:white;line-height:180%;padding:0 15px 12px;width:520px;margin:10px auto;color:#555555;font-family:'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size:12px;margin-bottom: 0px;">
         <h2 style="font-size:14px;font-weight:normal;padding:13px 0 10px 8px;">
             <span style="color: #ff7272;font-weight: bold;"></span>
-            您的<a style="text-decoration:none;color: #ff7272;" href="{{post_permalink}}" target="_blank">
-                《{{post_title}}》
+            您的<a style="text-decoration:none;color: #ff7272;" href="{{permalink}}" target="_blank">
+                《{{title}}》
             </a>有了新的回复:
         </h2>
         <div style="padding:0 12px 0 12px;margin-top:18px">
@@ -21,23 +21,25 @@
             </style>
             <p class="comment"
                 style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
-                {{comment_content}}</p>
+                {{text}}</p>
             <p>详细信息: </p>
             <p
                 style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
-                IP: {{ip}}<br />
-                邮箱: <a style="text-decoration:none;color: #ff7272;" href="mailto:{{comment_author_mail}}">
-                    {{comment_author_mail}}
-                </a><br />
-                状态: {{status}} [<a style="text-decoration:none;color: #ff7272;" href='{{manage_url}}'
+                IP: {{ip}}
+                <br />
+                邮箱: <a style="text-decoration:none;color: #ff7272;" href="mailto:{{mail}}">{{mail}}</a>
+                <br />
+                时间: {{time}}
+                <br />
+                状态: {{status}} [<a style="text-decoration:none;color: #ff7272;" href='{{manage}}'
                     target='_blank'>管理评论</a>]
             </p>
         </div>
     </div>
     <a style="text-decoration: none;color: rgb(255, 255, 255);width: 40%;text-align: center;background-color: rgb(255, 114, 114);height: 40px;line-height: 40px;box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);display: block;margin: auto;"
-        href="{{comment_permalink}}" target="_blank">查看回复的完整內容</a>
+        href="{{permalink}}" target="_blank">查看回复的完整內容</a>
     <div
         style="color:#8c8c8c;;font-family: 'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size: 10px;width: 100%;text-align: center; padding-bottom: 1px;">
-        <p>©2019-2020 Copyright {{site_name}}</p>
+        <p>©2019-2020 Copyright {{siteTitle}}</p>
     </div>
 </div>
