--- a/template/guest.html
+++ b/template/guest.html
@@ -5,12 +5,12 @@
     </div>
     <div
         style="width: 200px;height: 40px;background-color: rgb(255, 114, 114);margin-top: -20px;margin-left: 20px;box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);color: rgb(255, 255, 255);text-align: center;line-height: 40px;">
-        Dear: {{comment_parent_author_name}}</div>
+        Dear: {{author_p}}</div>
     <div
         style="background-color:white;line-height:180%;padding:0 15px 12px;width:520px;margin:30px auto;color:#555555;font-family:'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size:12px;margin-bottom: 0px;">
         <h2 style="font-size:14px;font-weight:normal;padding:13px 0 10px 8px;"><span
                 style="color: #12ADDB;font-weight: bold;"></span>您在<a style="text-decoration:none;color: #ff7272;"
-                href="{{post_permalink}}" target="_blank">《{{post_title}}》</a>的评论有了新的回复: </h2>
+                href="{{permalink}}" target="_blank">《{{title}}》</a>的评论有了新的回复: </h2>
         <div style="padding:0 12px 0 12px;margin-top:18px">
             <style type="text/css">
                 .comment>img {
@@ -21,11 +21,11 @@
             <p>您的评论: </p>
             <p class="comment"
                 style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
-                {{comment_parent_content}}</p>
-            <p><strong>{{comment_author_name}}</strong>&nbsp;给您的回复: </p>
+                {{originText}}</p>
+            <p><strong>{{author}}</strong>&nbsp;给您的回复: </p>
             <p class="comment"
                 style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
-                {{comment_content}}</p>
+                {{text}}</p>
         </div>
     </div>
     <div
@@ -35,13 +35,13 @@
         </p>
     </div>
     <a style="text-decoration:none; color:#FFF;width: 40%;text-align: center;background-color:#ff7272;height: 40px;line-height: 35px;box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.30);margin: -10px auto;display: block;"
-        href="{{comment_permalink}}" target="_blank">查看回复的完整內容</a>
+        href="{{permalink}}" target="_blank">查看回复的完整內容</a>
     <div
         style="color:#8c8c8c;;font-family: 'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size: 10px;width: 100%;text-align: center;margin-top: 30px;">
         <p>本邮件为系统自动发送，请勿直接回复~</p>
     </div>
     <div
         style="color:#8c8c8c;;font-family: 'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size: 10px;width: 100%;text-align: center;padding-bottom: 1px;">
-        <p>©2019-2020 Copyright {{site_name}}</p>
+        <p>©2019-2020 Copyright {{siteTitle}}</p>
     </div>
 </div>
