--- a/template/guest.html
+++ b/template/guest.html
@@ -21,7 +21,7 @@
             <p>您的评论: </p>
             <p class="comment"
                 style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
-                {{originText}}</p>
+                {{text_p}}</p>
             <p><strong>{{author}}</strong>&nbsp;给您的回复: </p>
             <p class="comment"
                 style="background-color: #f5f5f5;border: 0px solid #DDD;border-radius: 5px;padding: 10px 15px;margin:18px 0">
