--- a/template/owner.html
+++ b/template/owner.html
@@ -12,7 +12,7 @@
             </a>有了新的回复:
         </h2>
         <div style="padding:0 12px 0 12px;margin-top:18px">
-            <p><strong>{{comment_author_name}}</strong>&nbsp;给您的评论: </p>
+            <p><strong>{{author}}</strong>&nbsp;给您的评论: </p>
             <style type="text/css">
                 .comment>img {
                     margin: 0px 6px 5px 6px;
