--- a/template/guest.html
+++ b/template/guest.html
@@ -1,7 +1,7 @@
 <div
     style="width: 550px;height: auto;border-radius: 5px;margin:0 auto;box-shadow: 0px 0px 20px #888888;position: relative;padding-bottom: 5px;">
     <div
-        style="background-image: url(https://cdn.jsdelivr.net/gh/soxft/cdn@1.0.1/commenttomail/pic.png);width:550px;height: 300px;background-size: cover;background-repeat: no-repeat;border-radius: 5px 5px 0px 0px;">
+        style="background-image: url(https://s1.328888.xyz/2022/06/08/zcnnd.png);width:550px;height: 300px;background-size: cover;background-repeat: no-repeat;border-radius: 5px 5px 0px 0px;">
     </div>
     <div
         style="width: 200px;height: 40px;background-color: rgb(255, 114, 114);margin-top: -20px;margin-left: 20px;box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);color: rgb(255, 255, 255);text-align: center;line-height: 40px;">
