--- a/template/owner.html
+++ b/template/owner.html
@@ -1,7 +1,7 @@
 <div
     style="width: 550px;height: auto;border-radius: 5px;margin:0 auto;box-shadow: 0px 0px 20px #888888;position: relative;">
     <div
-        style="background-image: url(https://cdn.jsdelivr.net/gh/soxft/cdn@1.0.1/commenttomail/pic.png);width:550px;height: 250px;background-size: cover;background-repeat: no-repeat;border-radius: 5px 5px 0px 0px;">
+        style="background-image: url(https://s1.328888.xyz/2022/06/08/zcnnd.png);width:550px;height: 250px;background-size: cover;background-repeat: no-repeat;border-radius: 5px 5px 0px 0px;">
     </div>
     <div
         style="background-color:white;line-height:180%;padding:0 15px 12px;width:520px;margin:10px auto;color:#555555;font-family:'Century Gothic','Trebuchet MS','Hiragino Sans GB',微软雅黑,'Microsoft Yahei',Tahoma,Helvetica,Arial,'SimSun',sans-serif;font-size:12px;margin-bottom: 0px;">
